xong cơ bản update sp,quản lý, xóa , edit, footer

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-PORT = 3000
-DB_HOST = localhost
+PORT=3000
+DB_HOST=localhost
+MONGODB_URI=mongodb://127.0.0.1:27017/Shoe_Store_2
+SESSION_SECRET=tiemgiaykhanhduy
+NODE_ENV=development
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=123456
