--- a/package.json
+++ b/package.json
@@ -12,10 +12,20 @@
   "license": "ISC",
   "description": "Cửa Hàng Giày Dép",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-flash": "^0.0.2",
     "express-handlebars": "^8.0.1",
-    "morgan": "^1.10.0"
+    "express-session": "^1.18.1",
+    "handlebars": "^4.7.8",
+    "hbs": "^4.2.0",
+    "helmet": "^8.0.0",
+    "mongoose": "^8.9.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "browser-sync": "^3.0.3",
